--- a/fordson/templates/upcomingcourse.mustache
+++ b/fordson/templates/upcomingcourse.mustache
@@ -1,165 +1,9 @@
 <div id="fordsoncarouselup" class="carousel slide fordsoncarouselup" data-ride="carousel">
 
 <div class="carousel-inner" role="listbox"> 
-
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/German1.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-				<h3><div class="text_to_html">German I</div></h3>
-        <p><div class="text_to_html">German I is meant to be an introduction to the German language and a basic orientation towards Germany (and to some extent Austria and Switzerland).
-					Learning to understand and articulate oneself in day to day real life situations, and to begin to make sense of Germany as a cultural space are the overall objectives of the course. 
-					Serious learners should be able to grasp the basic sentence structure and build a good foundational vocabulary through this course. </div></p>
-		</div>
-	</div>
-	</div>
-
-		<div class="carousel-item align-items-center bg-white row active">
-<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/German2.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-			  <h3><div class="text_to_html">German II</div></h3>
-        <p><div class="text_to_html"> German II builds upon German I to help the learner acquire a level of competence(A1+A2) as per the European common language Framework. 
-		It is meant to broaden and deepen the learner's understanding of German grammatical structures, further enrich her vocabulary to cover all aspects of daily living, and to develop a basic 
-		understanding of the German culture space. Serious learners should be able to get a comprehension understanding of basic German grammar, and build a good enough vocabulary to be able to articulate themselves 
-		in any given daily life situation, and about basics themes of personal interest. </div></p>
-		
-
-			  </div>
+<!-- Rachita: upcoming courses section -->
+{{{ output.get_upcoming_courses }}} 
 </div>
-</div>
-	
-	<!-- secod one -->
-
-	
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/Understandingdesign.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-				<h3><div class="text_to_html">Understanding Design Thinking and People Centered Design</div></h3>
-        <p><div class="text_to_html">This course shall help employees understand the notions of Design Thinking and People Centered Design and how a PCD approach is different from traditional engineering or marketing focused approaches.
-		Today DT and PCD are being rapidly adopted and have achieved center stage by various industries. Employees from various disciplines and levels of experience can learn these simple methods, concepts and tools. 
-		In order to master the topic however, they must actually execute a project to apply the teachings, which is not a part of this course. </div></p>
-		</div>
-	</div>
-	</div>
-	
-	
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/Vibrations.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-				<h3><div class="text_to_html">Vibration of Structures</div></h3>
-        <p><div class="text_to_html">The course describes vibrations of strings and bars, Wave propagation and scattering, Vibrations of beams, Vibrations of membranes and Vibrations of plates. 
-		Every topic has been divided into concrete sub-topics for the benefit of the employees. </div></p>
-		</div>
-	</div>
-	</div>
-	
-	
-<!--
-
-	
-	<div class="carousel-item align-items-center bg-white row active">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/Operations_Research.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-			  <h3><div class="text_to_html">Introduction to Operations Research</div></h3>
-				<p>
-					<div class="text_to_html">The course covers topics on linear programming, Graphical and Algebraic solutions, Simplex Algorithm, Duality, Understanding the dual, Solving LPs using Solver, 
-					Transportation problem & Assignment problem. Employees shall get in depth knowledge of how research on Operations is conducted and the results obtained thereafter. 
-					</div>
-				</p>
-			  </div>
-	</div>
-	</div>
-
-
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/neev_new.gif" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-			  
-									<h3><div class="text_to_html">NEEV: Competency Development Foundation Program</div></h3>
-        <p><div class="text_to_html">This program focusses on providing employees with specific skills sets to prepare them to adapt successfully to rapidly changing business environment. 
-		The program has been designed to address key competencies that are essential to meet the challenges and perform well in today’s corporate world. The program beautifully encapsulates four courses: 
-		Soft Skills, Workplace Communication, Financial Literacy and Effective use of IT. </div></p>
-			  </div>
-	</div>
-	</div>
--->
-
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/managing_services.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-				<h3><div class="text_to_html">Managing Services</div></h3>
-        <p><div class="text_to_html">  Service is the key economic engine for most developed countries and also for emerging economies like India. This course focuses on the interdisciplinary nature of Service Management seamlessly spanning Marketing,
-		Operations, Technology and People Management. New Service Business Models will be explored that seek to balance People, Planet concerns with Profit objectives </div></p>
-		</div>
-	</div>
-	</div>
-	
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/global_supply_mgmt.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-				<h3><div class="text_to_html">Global Supply Chain Management</div></h3>
-        <p><div class="text_to_html">Supply chains are generally considered as a network of nodes with each node adding value to products that swiftly flow through the logistics and IT pipelines connecting the nodes, finally emerging out as finished products for consumption. From the single owner vertical integrated network, supply chain networks have evolved into a globally dispersed multiple owner networks, each controlling the respective nodes and the links, in coordination and collaboration with other stakeholders. There are also lots of government interventions in the production matters in the form of protectionist regulations and preferences to local firms in government procurement </div></p>
-		</div>
-	</div>
-	</div>
-	
-	<div class="carousel-item align-items-center bg-white row">
-	<div class="col-12 col-sm-12 text-center">
-			<div class="profile-container test-image col-sm-3 col-md-3 float-right ">
-			  <p class="text-center">
-				<img src="https://hpacademy.hpcl.co.in/elearning/theme/fordson/pix/upcoming/English_lang.jpg" class="w-min-200 img-fluid img-responsive  rounded-circle" alt="">
-			  </p>
-			</div>
-			  <div class=" pl-40 quote-container test-text col-sm-9 col-md-9 text-left float-left ">
-			  <h3><div class="text_to_html">English Language and Literature</div></h3>
-				<p><div class="text_to_html">This course seeks to impart, in both a compact and comprehensive manner, the necessary knowledge in English language and literature. The course aims to help employees understand English language and literature using a multifaceted methodology that includes the historical, linguistic, literary and critical dimensions.</div></p>
-				
-      </div>
-	</div>
-	</div>
-	
-	 
-</div>
-
     <a class="left carousel-control" href="#fordsoncarouselup" role="button" data-slide="prev">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
       <span class="sr-only">Previous</span>
@@ -168,5 +12,4 @@
       <i class="fa fa-chevron-right" aria-hidden="true"></i>
       <span class="sr-only">Next</span>
     </a>
-
 </div>
